@@ -17,70 +17,55 @@
  */
 package io.github.mzmine.datamodel.impl;
 
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.Iterator;
+import java.util.Objects;
+import java.util.Set;
+import java.util.logging.Logger;
+import java.util.stream.Stream;
+import javax.annotation.Nonnull;
+import javax.annotation.Nullable;
+import com.google.common.collect.Range;
+import com.google.common.collect.Streams;
 import io.github.mzmine.datamodel.DataPoint;
 import io.github.mzmine.datamodel.Frame;
 import io.github.mzmine.datamodel.ImsMsMsInfo;
 import io.github.mzmine.datamodel.MassList;
+import io.github.mzmine.datamodel.MassSpectrum;
 import io.github.mzmine.datamodel.MassSpectrumType;
 import io.github.mzmine.datamodel.MobilityScan;
 import io.github.mzmine.datamodel.MobilityType;
 import io.github.mzmine.datamodel.RawDataFile;
-import io.github.mzmine.util.DataPointSorter;
-import io.github.mzmine.util.DataPointUtils;
-import io.github.mzmine.util.SortingDirection;
-import io.github.mzmine.util.SortingProperty;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.Objects;
-import java.util.Set;
-import java.util.logging.Logger;
-import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
 
 /**
  * @author https://github.com/SteffenHeu
  * @see io.github.mzmine.datamodel.MobilityScan
  */
-public class SimpleMobilityScan extends AbstractStorableSpectrum implements MobilityScan {
+public class SimpleMobilityScan implements MobilityScan {
 
-  private final Logger logger = Logger.getLogger(this.getClass().getName());
+  private static final Logger logger = Logger.getLogger(SimpleMobilityScan.class.getName());
 
-  private final RawDataFile dataFile;
-  private final Frame frame;
-  private int mobilityScamNumber;
-  private final Set<MassList> massLists;
+  private final SimpleFrame frame;
+  private MassList[] massLists;
+  private final int storageOffset;
+  private final int numDataPoints;
+  private final int mobilityScanNumber;
+  private final int basePeakIndex;
 
-  public SimpleMobilityScan(RawDataFile dataFile, int mobilityScamNumber, Frame frame,
-      DataPoint dataPoints[]) {
-    super(dataFile.getMemoryMapStorage());
-    this.dataFile = dataFile;
+  public SimpleMobilityScan(int mobilityScanNumber, SimpleFrame frame, int storageOffset,
+      int numDataPoints, int basePeakIndex) {
     this.frame = frame;
-    this.massLists = new HashSet<>();
-    this.mobilityScamNumber = mobilityScamNumber;
-    setDataPoints(dataPoints);
+    this.massLists = null;
+    this.mobilityScanNumber = mobilityScanNumber;
+    this.storageOffset = storageOffset;
+    this.numDataPoints = numDataPoints;
+    this.basePeakIndex = basePeakIndex;
   }
 
-  public SimpleMobilityScan(RawDataFile dataFile, int mobilityScamNumber, Frame frame,
-      double mzValues[], double intensityValues[]) {
-    super(dataFile.getMemoryMapStorage());
-    this.dataFile = dataFile;
-    this.frame = frame;
-    this.massLists = new HashSet<>();
-    this.mobilityScamNumber = mobilityScamNumber;
-    try {
-      setDataPoints(mzValues, intensityValues);
-    } catch (IllegalArgumentException e) {
-      DataPoint[] dps = new DataPoint[mzValues.length];
-      for (int i = 0; i < mzValues.length; i++) {
-        dps[i] = new SimpleDataPoint(mzValues[i], intensityValues[i]);
-      }
-      DataPointSorter sorter = new DataPointSorter(SortingProperty.MZ, SortingDirection.Ascending);
-      Arrays.sort(dps, sorter);
-      double[][] data = DataPointUtils.getDataPointsAsDoubleArray(dps);
-      setDataPoints(data[0], data[1]);
-      logger.info("Sorted dps.");
-    }
+  @Override
+  public int getNumberOfDataPoints() {
+    return numDataPoints;
   }
 
   @Override
@@ -89,8 +74,78 @@ public class SimpleMobilityScan extends AbstractStorableSpectrum implements Mobi
   }
 
   @Override
+  public double[] getMzValues(@Nonnull double[] dst) {
+    if (dst.length < getNumberOfDataPoints()) {
+      dst = new double[getNumberOfDataPoints()];
+    }
+    frame.getMobilityScanMzValues(this, dst);
+    return dst;
+  }
+
+  @Override
+  public double[] getIntensityValues(@Nonnull double[] dst) {
+    if (dst.length < getNumberOfDataPoints()) {
+      dst = new double[getNumberOfDataPoints()];
+    }
+    frame.getMobilityScanIntensityValues(this, dst);
+    return dst;
+  }
+
+  @Override
+  public double getMzValue(int index) {
+    return frame.getMobilityScanMzValue(this, index);
+  }
+
+  @Override
+  public double getIntensityValue(int index) {
+    return frame.getMobilityScanIntensityValue(this, index);
+  }
+
+  @Nullable
+  @Override
+  public Double getBasePeakMz() {
+    if (basePeakIndex == -1) {
+      return null;
+    }
+    return getMzValue(basePeakIndex);
+  }
+
+  @Nullable
+  @Override
+  public Double getBasePeakIntensity() {
+    if (basePeakIndex == -1) {
+      return null;
+    }
+    return getIntensityValue(basePeakIndex);
+  }
+
+  @Nullable
+  @Override
+  public Integer getBasePeakIndex() {
+    return basePeakIndex == -1 ? null : basePeakIndex;
+  }
+
+  @Nullable
+  @Override
+  public Range<Double> getDataPointMZRange() {
+    return Range.closed(getMzValue(0), getMzValue(getNumberOfDataPoints() - 1));
+  }
+
+  @Nullable
+  @Override
+  public Double getTIC() {
+    return null;
+  }
+
+  @Nonnull
+  @Override
+  public RawDataFile getDataFile() {
+    return getFrame().getDataFile();
+  }
+
+  @Override
   public double getMobility() {
-    return frame.getMobilityForMobilityScanNumber(mobilityScamNumber);
+    return frame.getMobilityForMobilityScanNumber(mobilityScanNumber);
   }
 
   @Override
@@ -109,44 +164,66 @@ public class SimpleMobilityScan extends AbstractStorableSpectrum implements Mobi
   }
 
   @Override
-  public int getMobilityScamNumber() {
-    return mobilityScamNumber;
+  public int getMobilityScanNumber() {
+    return mobilityScanNumber;
   }
 
   @Nullable
   @Override
   public ImsMsMsInfo getMsMsInfo() {
-    return frame.getImsMsMsInfoForMobilityScan(mobilityScamNumber);
+    return frame.getImsMsMsInfoForMobilityScan(mobilityScanNumber);
+  }
+
+  /**
+   * @return Used to retrieve this scans storage offset when reading mz/intensity values. Not
+   *         intended for public usage, therefore not declared in {@link MobilityScan}.
+   */
+  int getStorageOffset() {
+    return storageOffset;
   }
 
   @Override
   public synchronized void addMassList(final @Nonnull MassList massList) {
     // Remove all mass lists with same name, if there are any
-    MassList currentMassLists[] = massLists.toArray(new MassList[0]);
-    for (MassList ml : currentMassLists) {
-      if (ml.getName().equals(massList.getName())) {
-        removeMassList(ml);
+    if (massLists == null || massLists.length == 0) {
+      massLists = new MassList[] {massList};
+      return;
+    }
+
+    for (int i = 0; i < massLists.length; i++) {
+      if (massLists[i].getName().equals(massList.getName())) {
+        massLists[i] = massList;
+        return;
       }
     }
 
     // Add the new mass list
-    massLists.add(massList);
+    MassList[] oldMassLists = massLists;
+    massLists = new MassList[oldMassLists.length + 1];
+
+    for (int i = 0; i < oldMassLists.length; i++) {
+      massLists[i] = oldMassLists[i];
+    }
+    massLists[oldMassLists.length] = massList;
   }
 
   @Override
   public synchronized void removeMassList(final @Nonnull MassList massList) {
     // Remove the mass list
-    massLists.remove(massList);
+    massLists = (MassList[]) Arrays.stream(massLists).filter(ml -> ml != massList).toArray();
   }
 
   @Override
   @Nonnull
   public Set<MassList> getMassLists() {
-    return Objects.requireNonNullElse(massLists, Collections.emptySet());
+    return Objects.requireNonNullElse(Set.of(massLists), Collections.emptySet());
   }
 
   @Override
   public MassList getMassList(@Nonnull String name) {
+    if (massLists == null) {
+      return null;
+    }
     for (MassList ml : massLists) {
       if (ml.getName().equals(name)) {
         return ml;
@@ -156,8 +233,50 @@ public class SimpleMobilityScan extends AbstractStorableSpectrum implements Mobi
   }
 
   @Override
-  public RawDataFile getDataFile() {
-    return dataFile;
+  public Iterator<DataPoint> iterator() {
+    return new DataPointIterator(this);
   }
 
+  @Override
+  public Stream<DataPoint> stream() {
+    return Streams.stream(this);
+  }
+
+  private class DataPointIterator implements Iterator<DataPoint>, DataPoint {
+
+    private final MassSpectrum spectrum;
+    // We start at -1 so the first call to next() moves us to index 0
+    private int cursor = -1;
+
+    DataPointIterator(MassSpectrum spectrum) {
+      this.spectrum = spectrum;
+    }
+
+    @Override
+    public boolean hasNext() {
+      return (cursor + 1) < spectrum.getNumberOfDataPoints();
+    }
+
+    @Override
+    public DataPoint next() {
+      cursor++;
+      return this;
+    }
+
+    @Override
+    public void remove() {
+      throw new UnsupportedOperationException();
+    }
+
+    @Override
+    public double getMZ() {
+      return spectrum.getMzValue(cursor);
+    }
+
+    @Override
+    public double getIntensity() {
+      return spectrum.getIntensityValue(cursor);
+    }
+
+  }
 }
